feat(node-utils): Add Logger
Rename some tests
Set version to 1.0.0 to simplify dependencies from other packages

--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jtbennett/node-utils",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0",
   "description": "Utilities with minimal dependencies for use in node apps.",
   "keywords": [],
   "author": "John Bennett <john@jtbennett.com>",
